Fix z-index of sub header menu

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -144,7 +144,7 @@
                     background-color: white;
                     padding-left: 0px;
                     width: max-content;
-                    z-index: 1;
+                    z-index: 2;
                     border: 1px solid base.$gray;
                     top: 100%;
 
